src/ui/platforms/desktop/src/pages/lobby/lobby.module.css
@value gridLine from '../../ui/metrics/metrics.css';

.lobby {
    display: flex;
    width: 100vw;
    height: 100vh;
    overflow-x: auto;
    justify-content: center;
    position: relative;
}

.background {
    position: absolute;
    align-self: center;
    width: 100vw;
    height: 100vh;
    filter: brightness(0.5);
}

.logo {
    margin-bottom: calc(gridLine * 4);
    max-width: calc(gridLine * 32);
    align-self: center;
}

.board {
    display: flex;
    width: 50%;
    padding: calc(gridLine * 2);
    flex-direction: column;
}

.illustration {
    position: absolute;
    align-self: center;
    top: calc(100% + calc(gridLine * 4));
    right: 95%;
    z-index: 0;
}

.button {
    margin-left: 4px;
    align-self: center;
}

.gameModeIcon {
    max-height: calc(gridLine * 3);
    max-width: calc(gridLine * 3);
}

.roomList {
    list-style: none;
    padding: 0;
    min-height: calc(gridLine * 60);
    z-index: 2;
    color: white;
    border-radius: 4px;
    padding: 4px;
    position: relative;
    padding: calc(gridLine * 5) calc(gridLine * 6);
    padding-right: calc(gridLine * 12);
    position: relative;
}
.roomListBackground {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0.85;
}

.roomInfo {
    display: flex;
    justify-content: space-between;
    padding: 0 calc(gridLine / 2);
    align-items: center;
    box-shadow: 0 0 0 0, inset 0 0 0 0;
    transition: box-shadow 0.2s;
}
.roomInfo:hover {
    box-shadow: 0 0 5px 1px rgb(247 176 69), inset 0 0 5px 0 rgb(247 176 69);
}
.roomInfo:last-of-type {
    border-bottom: 0;
}

.gameInfo {
    display: flex;
    padding: calc(gridLine * 4);
}

.actionPlace {
    display: flex;
    padding: calc(gridLine * 4);
    border-top: 1px solid black;
}
.functionBoard {
    position: relative;
    padding: calc(gridLine * 2);
    display: flex;
    justify-content: flex-end;
}

.roomActions {
    display: flex;
    justify-content: flex-end;
}

.chatInfo {
}

.systemButtons {
    margin-top: calc(gridLine * 4);
    display: flex;
    z-index: 2;
    justify-content: flex-end;
}

.systemButton {
    background: none;
    border: none;
    margin: 0 calc(gridLine * 2);
    outline: 0;
    cursor: pointer;
}
.systemButton:hover {
    filter: brightness(1.3);
}

.systemButton:active {
    filter: brightness(0.8);
}

.lobbyButtonIcon {
    max-height: calc(gridLine * 10);
}

.systemButton:disabled {
    filter: brightness(0.3);
    cursor: inherit;
}

.createRoomButton {
    position: absolute;
    right: calc(gridLine * 6);
    top: calc(gridLine * 3.5);
}

